[gd_scene load_steps=3 format=3 uid="uid://offers_scene_new"]

[ext_resource type="Script" path="res://scripts/OffersScene.gd" id="1_offers"]

[node name="OffersScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_offers")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.184, 0.106, 0.078, 1)

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
anchor_left = 0.0
anchor_top = 0.0
offset_left = 20
offset_right = -20
offset_top = 20
offset_bottom = -20
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="BackButton" type="Button" parent="MainContainer/Header"]
layout_mode = 2
size_flags_horizontal = 0
custom_minimum_size = Vector2(100, 50)
text = "‚Üê Volver"

[node name="TitleLabel" type="Label" parent="MainContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "üéÅ OFERTAS ESPECIALES"
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="MainContainer/Header"]
layout_mode = 2
size_flags_horizontal = 0
text = "‚è∞ 23:59:59"

[node name="OffersContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DailyOffers" type="VBoxContainer" parent="MainContainer/OffersContainer"]
layout_mode = 2

[node name="DailyOffersLabel" type="Label" parent="MainContainer/OffersContainer/DailyOffers"]
layout_mode = 2
text = "üìÖ OFERTAS DIARIAS"

[node name="DailyOffersList" type="GridContainer" parent="MainContainer/OffersContainer/DailyOffers"]
layout_mode = 2
columns = 2

[node name="Spacer1" type="Control" parent="MainContainer/OffersContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="WeeklyOffers" type="VBoxContainer" parent="MainContainer/OffersContainer"]
layout_mode = 2

[node name="WeeklyOffersLabel" type="Label" parent="MainContainer/OffersContainer/WeeklyOffers"]
layout_mode = 2
text = "üìÜ OFERTAS SEMANALES"

[node name="WeeklyOffersList" type="GridContainer" parent="MainContainer/OffersContainer/WeeklyOffers"]
layout_mode = 2
columns = 1

[node name="Spacer2" type="Control" parent="MainContainer/OffersContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="SpecialOffers" type="VBoxContainer" parent="MainContainer/OffersContainer"]
layout_mode = 2

[node name="SpecialOffersLabel" type="Label" parent="MainContainer/OffersContainer/SpecialOffers"]
layout_mode = 2
text = "‚≠ê OFERTAS ESPECIALES"

[node name="SpecialOffersList" type="VBoxContainer" parent="MainContainer/OffersContainer/SpecialOffers"]
layout_mode = 2
